--- a/text1.css
+++ b/text1.css
@@ -132,3 +132,27 @@ a {
     width: 200px;
     height: 50px;
 }
+a {
+    text-decoration: none;
+  }
+  a:hover {
+    background-color: rgb(255, 0, 0);
+  }
+
+  #button{
+	border-radius: 20px;
+	border: 4px solid black;
+	background-color: #ffa100;
+	width: 150px;
+	height: 50px;
+	transition-duration: 0.25s;
+    padding: auto;
+}
+
+#button:hover{
+	border-radius: 20px;
+	border: 2px solid black;
+	background-color: rgb(238, 255, 0);
+	width: 150px;
+	height: 60px;
+}
