--- a/text.css
+++ b/text.css
@@ -172,3 +172,44 @@ a {
 	width: 150px;
 	height: 70px;
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+  }
+  html,body{
+    display: grid;
+    height: 100vh;
+    place-items: center;
+    background: #000;
+  }
+  .btn a{
+    position: relative;
+    color: #f5f5f5;
+    height: 70px;
+    width: 180px;
+    display: block;
+    text-align: center;
+    border-radius: 15px;
+    text-decoration: none;
+    background-image: linear-gradient(115deg,#4fcf70,#fad648,#a767e5,#12bcfe,#44ce7b);
+  }
+  .btn a:hover{
+    animation: rotate 0.4s linear infinite;
+  }
+  
+  .btn a span{
+      content: '\00bb';
+    height: 88%;
+    width: 96%;
+    background: #111;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 6px;
+    line-height: 62px;
+    font-size: 25px;
+    transform: translate(-50%, -50%);
+  }
